Bug 767705 - decomtaminate GetSelectedCells() on accessible tables, r=tbsaunde